@@ -1,4 +1,5 @@
 0.12.31 July xx, 2023
+- to improve accessibility in the backfile, ebookmaker now recognizes figures and captions which use class names like 'figcenter' and 'caption'. `role='figure'` and `aria-labelledby` attributes are added to the element used as a figure. New source files should not use this markup,  the HTML5 `figure` and `figcaption` elements are preferred. Addresses fixes #178.
 - ebookmaker was not adding boilerplate (including metadata) when the source file was txt. Now it does. 
 - added font-variant-numeric to the custom PG css profile. CSS Utils implemented CSS3-fonts before it was finalized, so it was missing font-variant-numeric. Fixes #188
 - removed polyfill css for `figure` in deprecated to EPUB2. The added CSS just caused problems. Fixes #151
